-Adding facebook webview to activity_accueil

--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     tools:context=".views.Accueil">
 
-    <include layout="@layout/home_content"/>
+<!--    <include layout="@layout/home_content"/>-->
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,7 +20,27 @@
             android:layout_height="match_parent"
             android:id="@+id/frameLayout"/>
 
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="411dp"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/white"
+            android:background="@color/dark_grey"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Place Web-view on the Screen -->
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="670dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
