--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -34,8 +34,8 @@
 <!--                app:civ_border_width="2dp" />-->
             <ImageView
                 android:id="@+id/profilePic"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
                 android:layout_toEndOf="@id/profilePic"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="@string/safa"
+                android:text="@string/name"
                 android:textAlignment="center"
                 android:textSize="30sp" />
 
@@ -99,10 +99,10 @@
                 android:layout_marginTop="15dp"
                 android:text="Profile" />
 
-            <TextView
-                style="@style/viewParent.headerText.settingsTextIcon"
-                android:text="@string/edit_profile"
-                app:drawableLeftCompat="@drawable/ic_edit_profile" />
+<!--            <TextView-->
+<!--                style="@style/viewParent.headerText.settingsTextIcon"-->
+<!--                android:text="@string/edit_profile"-->
+<!--                app:drawableLeftCompat="@drawable/ic_edit_profile" />-->
 
             <TextView
                 style="@style/viewParent.headerText.settingsTextIcon"
